--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,7 @@
 				<version>3.6.0.1398</version>
 			</plugin>
 
-			<!-- <plugin>
+			<plugin>
 				<groupId>com.github.eirslett</groupId>
 				<artifactId>frontend-maven-plugin</artifactId>
 				<version>1.7.6</version>
@@ -89,8 +89,8 @@
 							<goal>install-node-and-npm</goal>
 						</goals>
 						<configuration>
-							<nodeVersion>v10.16.0</nodeVersion>
-							<npmVersion>6.14.4</npmVersion>
+							<nodeVersion>v10.16.3</nodeVersion>
+							<npmVersion>6.9.0</npmVersion>
 						</configuration>
 					</execution>
 					<execution>
@@ -108,11 +108,11 @@
 							<goal>webpack</goal>
 						</goals>
 						<configuration>
-							<arguments>-_-config webpack.js -p -_-env.version=${project.version}</arguments>
+							<arguments>--config webpack.config.js -p --env.version=${project.version}</arguments>
 						</configuration>
 					</execution>
 				</executions>
-			</plugin> -->
+			</plugin>
 		</plugins>
 	</build>
 </project>
