--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 		<dependency>
@@ -75,7 +80,7 @@
 				<version>3.6.0.1398</version>
 			</plugin>
 
-			<plugin>
+			<!-- <plugin>
 				<groupId>com.github.eirslett</groupId>
 				<artifactId>frontend-maven-plugin</artifactId>
 				<version>1.7.6</version>
@@ -108,11 +113,11 @@
 							<goal>webpack</goal>
 						</goals>
 						<configuration>
-							<arguments>--config webpack.config.js -p --env.version=${project.version}</arguments>
+							<arguments>-_-config webpack.config.js -p -_-env.version=${project.version}</arguments>
 						</configuration>
 					</execution>
 				</executions>
-			</plugin>
+			</plugin> -->
 		</plugins>
 	</build>
 </project>
