--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "jest": {
     "moduleNameMapper": {
-		"^bucares(.*)$": "<rootDir>/src/main/js$1"
-	}
+      "^bucares(.*)$": "<rootDir>/src/main/js$1"
+    }
   },
   "devDependencies": {
     "@babel/cli": "7.4.4",
@@ -21,6 +21,8 @@
     "axios": "0.19.0",
     "babel-loader": "8.0.6",
     "css-loader": "3.0.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "immutable": "3.8.2",
     "jest": "^25.4.0",
     "react": "16.8.6",
