--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
   "jest": {
     "moduleNameMapper": {
       "^bucares(.*)$": "<rootDir>/src/main/js$1"
+    },
+    "globals": {
+      "env": {
+        "VERSION": "0-SNAPSHOT",
+        "MODE": "DEV"
+      }
     }
   },
   "devDependencies": {
@@ -19,6 +25,7 @@
     "@babel/preset-env": "7.4.5",
     "@babel/preset-react": "7.0.0",
     "axios": "0.19.0",
+    "babel-jest": "^25.4.0",
     "babel-loader": "8.0.6",
     "css-loader": "3.0.0",
     "enzyme": "^3.11.0",
@@ -42,6 +49,8 @@
     "@material-ui/icons": "4.2.1",
     "classnames": "2.2.6",
     "expect": "24.8.0",
+    "fetch-mock": "^9.4.0",
+    "node-fetch": "^2.6.0",
     "prop-types": "15.7.2",
     "react-form-validator-core": "0.6.4",
     "react-material-ui-form-validator": "2.0.9",
