--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "webpack-cli": "3.3.5"
   },
   "dependencies": {
-    "@material-ui/core": "4.1.3",
+    "@material-ui/core": "^4.1.3",
     "@material-ui/icons": "4.2.1",
     "classnames": "2.2.6",
     "expect": "24.8.0",
