--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>io.bucares</groupId>
-	<artifactId>boilerplate</artifactId>
+	<groupId>com.pegasus</groupId>
+	<artifactId>indexation</artifactId>
 	<version>0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
