--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "VERSION": "0-SNAPSHOT",
         "MODE": "DEV"
       }
-    }
+    },
+    "coverageDirectory": "target/jest"
   },
   "devDependencies": {
     "@babel/cli": "7.4.4",
