--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>11</java.version>
+		<docker.image.prefix>pegasusma</docker.image.prefix>
 	</properties>
 
 	<parent>
@@ -211,6 +212,17 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+                <groupId>com.spotify</groupId>
+                <artifactId>dockerfile-maven-plugin</artifactId>
+                <version>1.3.6</version>
+                <configuration>
+                    <repository>pegasusma/indexation</repository>
+                    <buildArgs>
+                        <JAR_FILE>target/indexation-0-SNAPSHOT.jar</JAR_FILE>
+                    </buildArgs>
+                </configuration>
+            </plugin>
 		</plugins>
 	</build>
 </project>
