--- a/pom.xml
+++ b/pom.xml
@@ -215,14 +215,15 @@
 			<plugin>
                 <groupId>com.spotify</groupId>
                 <artifactId>dockerfile-maven-plugin</artifactId>
-                <version>1.3.6</version>
+                <version>1.4.0</version>
                 <configuration>
-                    <repository>pegasusma/indexation</repository>
-                    <buildArgs>
-                        <JAR_FILE>target/indexation-0-SNAPSHOT.jar</JAR_FILE>
-                    </buildArgs>
-                </configuration>
-            </plugin>
+					<repository>${docker.image.prefix}/${project.artifactId}</repository>
+ 					 <tag>${project.version}</tag> <!-- default tag latest -->
+					<buildArgs>
+						<JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
+					</buildArgs>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
