--- a/pom.xml
+++ b/pom.xml
@@ -218,12 +218,12 @@
                 <version>1.4.0</version>
                 <configuration>
 					<execution>
-						<id>docker-build</id>
+						<id>default</id>
 						<goals>
-							<goal>docker</goal>
+							<goal>build</goal>
 						</goals>
 						<configuration>
-							<arguments>build -f DockerFile -t ${docker.image.prefix}/${project.artifactId}:${project.version} .</arguments>
+							<arguments>-f DockerFile -t ${docker.image.prefix}/${project.artifactId}:${project.version} .</arguments>
 						</configuration>
 					</execution>
 				</configuration>
