--- a/pom.xml
+++ b/pom.xml
@@ -247,6 +247,21 @@
 					</resources>
 				</configuration>
 			</plugin> -->
+			<plugin>
+	            <groupId>com.spotify</groupId>
+	            <artifactId>dockerfile-maven-plugin</artifactId>
+	            <version>1.4.13</version>
+	            <configuration>
+	                <username>pegasusma</username>
+	                <password>hma@bucares</password>
+	                <useMavenSettingsForAuth>true</useMavenSettingsForAuth>
+	                <repository>${docker.image.prefix}/${project.artifactId}</repository>
+	                <tag>${project.version}</tag>
+	                <buildArgs>
+	                  <JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
+	                </buildArgs>
+	            </configuration>
+	        </plugin>
 		</plugins>
 	</build>
 </project>
