--- a/pom.xml
+++ b/pom.xml
@@ -247,7 +247,7 @@
 					</resources>
 				</configuration>
 			</plugin> -->
-			<plugin>
+			<!-- <plugin>
 	            <groupId>com.spotify</groupId>
 	            <artifactId>dockerfile-maven-plugin</artifactId>
 	            <version>1.4.13</version>
@@ -261,7 +261,7 @@
 	                  <JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
 	                </buildArgs>
 	            </configuration>
-	        </plugin>
+	        </plugin> -->
 		</plugins>
 	</build>
 </project>
