--- a/pom.xml
+++ b/pom.xml
@@ -254,7 +254,7 @@
 	            <configuration>
 	                <username>pegasusma</username>
 	                <password>hma@bucares</password>
-	                <useMavenSettingsForAuth>true</useMavenSettingsForAuth>
+	                <useMavenSettingsForAuth>false</useMavenSettingsForAuth>
 	                <repository>${docker.image.prefix}/${project.artifactId}</repository>
 	                <tag>${project.version}</tag>
 	                <buildArgs>
