--- a/pom.xml
+++ b/pom.xml
@@ -231,6 +231,7 @@
 							<include>${project.build.finalName}.jar</include>
 						</resource>
 					</resources>
+					<serverId>docker-hub</serverId>
 				</configuration>
 			</plugin>
 			<!-- <plugin>
