--- a/DockerFile
+++ b/DockerFile
@@ -5,10 +5,10 @@ MAINTAINER megasusma<hongyu.ma@hotmail.fr>
 LABEL name="Pegasus Indexation Image" \
 	build-date="20200518"
 	
-RUN mkdir /home/target
+ENV WORKPATH /home/target
+WORKDIR $WORKPATH
 
 #ARG JAR_FILE
 COPY target/indexation-0-SNAPSHOT.jar /home/target/app.jar
 
-#ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
-CMD ["java", "-jar", "/home/target/app.jar"]
+ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/home/target/app.jar"]
