--- a/nginx/conf.d/indexation.conf
+++ b/nginx/conf.d/indexation.conf
@@ -3,6 +3,15 @@ server {
 	server_name		www.pegasusma.com;
 	access_log		/var/log/nginx/host.access.log main;
 	location / {
-		proxy_pass http://indexation_1:80/ http://indexation_2:80/
+		proxy_pass http://indexation_1:80/
+	}
+}
+
+server {
+	listen			80;
+	server_name		www.pegasusma.com;
+	access_log		/var/log/nginx/host.access.log main;
+	location / {
+		proxy_pass http://indexation_2:80/
 	}
 }
