--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,10 @@
 		    <artifactId>jacoco-maven-plugin</artifactId>
 		    <version>0.8.3</version>
 		</dependency>
+		<dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
 	</dependencies>
 
 	<build>
