--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,10 @@ services:
   ports:
    - "80:80"
   depends_on:
-   - indexation
+   - indexation_1
   volumes: 
    - "./nginx/conf.d/:/etc/nginx/conf.d"
- indexation:
+ indexation_1:
   image: pegasusma/indexation:0-SNAPSHOT
   restart: always
   expose:
