--- a/nginx/conf.d/indexation.conf
+++ b/nginx/conf.d/indexation.conf
@@ -3,6 +3,6 @@ server {
 	server_name		www.pegasusma.com;
 	access_log		/var/log/nginx/host.access.log main;
 	location / {
-		proxy_pass http://indexation:8080/;
+		proxy_pass http://indexation_1:8080/;
 	}
 }
