--- a/nginx/conf.d/indexation.conf
+++ b/nginx/conf.d/indexation.conf
@@ -6,3 +6,12 @@ server {
 		proxy_pass http://indexation1:8080/;
 	}
 }
+
+server {
+	listen			80;
+	server_name		www.pegasusma.com;
+	access_log		/var/log/nginx/host.access.log main;
+	location / {
+		proxy_pass http://indexation2:8081/;
+	}
+}
