--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,20 +16,18 @@ spring.mvc.locale-resolver=fixed
 spring.resources.add-mappings=false
 
 # SERVER PROPERTIES
-server.port=8080
+# server.port=8080
 
 
-
-
-#spring.datasource.url=
-#spring.datasource.username=root
-#spring.datasource.password=
-#spring.datasource.driverClassName=com.mysql.jdbc.Driver
-
-spring.datasource.url=jdbc:h2:mem:soa_service_api
+spring.datasource.url=jdbc:mysql://mysql:3306/mysql
 spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.password=hma@bucares
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+
+#spring.datasource.url=jdbc:h2:mem:soa_service_api
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.datasource.driverClassName=org.h2.Driver
 
 spring.datasource.schema=classpath:schema.sql
 
