--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,33 +19,11 @@ spring.resources.add-mappings=false
 # server.port=8080
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/mysql?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/mysql
 spring.datasource.username=root
 spring.datasource.password=hma@bucares
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-spring.jpa.properties.hibernate.hbm2ddl.auto=create
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-
-#spring.datasource.url=jdbc:h2:mem:soa_service_api
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.datasource.driverClassName=org.h2.Driver
-
-#spring.datasource.schema=classpath:schema.sql
-
-#spring.datasource.data=classpath:data.sql
-
-#spring.jpa.database=H2
-
 spring.jpa.show-sql=true
-# Hibernate ddl auto (create, create-drop, update)
-spring.jpa.hibernate.ddl-auto=create
-# Naming strategy
-#spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
-
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.generate-ddl=true
-
-#spring.h2.console.enabled=true
-#spring.h2.console.path=/h2-console</databasename>
