--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.resources.add-mappings=false
 # server.port=8080
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/mysql
+spring.datasource.url=jdbc:mysql://mysql:3306/mysql
 spring.datasource.username=root
 spring.datasource.password=hma@bucares
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
