--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,8 @@ spring.resources.add-mappings=false
 # SERVER PROPERTIES
 # server.port=8080
 
-
+#########################################################
+## MySQL
 spring.datasource.url=jdbc:mysql://mysql:3306/mysql
 spring.datasource.username=root
 spring.datasource.password=hma@bucares
@@ -27,3 +28,25 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
+
+#########################################################
+## H2
+#spring.datasource.url=jdbc:h2:mem:soa_service_api
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.datasource.driverClassName=org.h2.Driver
+#
+#spring.datasource.schema=classpath:schema.sql
+#
+##spring.datasource.data=classpath:data.sql
+#
+#spring.jpa.database=H2
+#
+#spring.jpa.show-sql=true
+## Hibernate ddl auto (create, create-drop, update)
+#spring.jpa.hibernate.ddl-auto=update
+## Naming strategy
+##spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+#
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console</databasename>
