--- a/src/main/resources/indexation.properties
+++ b/src/main/resources/indexation.properties
@@ -4,3 +4,8 @@
 indexation.proxy.host=127.0.0.1
 indexation.proxy.port=8080
 ##################################################
+
+
+spring.data.rest.base-path=/api
+
+build.version=@project.version@
