--- a/pom.xml
+++ b/pom.xml
@@ -268,12 +268,12 @@
 	</build>
 	<distributionManagement>
 		<repository>
-			<id>nexus-releases</id>
+			<id>NexusRelease</id>
 			<name>Nexus Release Repository</name>
 			<url>http://161.35.220.171:8081/nexus/content/repositories/releases/</url>
 		</repository>
 		<snapshotRepository>
-			<id>nexus-snapshots</id>
+			<id>NexusSnapshot</id>
 			<name>Nexus Snapshot Repository</name>
 			<url>http://161.35.220.171:8081/nexus/content/repositories/snapshots/</url>
 		</snapshotRepository>
