--- a/pom.xml
+++ b/pom.xml
@@ -268,14 +268,14 @@
 	</build>
 	<distributionManagement>
 		<repository>
-			<id>NexusRelease</id>
+			<id>maven-releases</id>
 			<name>Nexus Release Repository</name>
-			<url>http://161.35.220.171:8081/nexus/content/repositories/releases/</url>
+			<url>http://161.35.220.171:8081/repository/maven-releases/</url>
 		</repository>
 		<snapshotRepository>
-			<id>NexusSnapshot</id>
+			<id>maven-snapshots</id>
 			<name>Nexus Snapshot Repository</name>
-			<url>http://161.35.220.171:8081/nexus/content/repositories/snapshots/</url>
+			<url>http://161.35.220.171:8081/repository/maven-snapshots/</url>
 		</snapshotRepository>
 	</distributionManagement>
 </project>
