--- a/application.properties
+++ b/application.properties
@@ -46,3 +46,5 @@ spring.jpa.show-sql=true
 #
 #spring.h2.console.enabled=true
 #spring.h2.console.path=/h2-console</databasename>
+
+build.version=0-SNAPSHOT
