--- a/application.properties
+++ b/application.properties
@@ -47,4 +47,4 @@ spring.jpa.show-sql=true
 #spring.h2.console.enabled=true
 #spring.h2.console.path=/h2-console</databasename>
 
-build.version=0-SNAPSHOT
+build.version=@build.version@
