--- a/application.properties
+++ b/application.properties
@@ -48,3 +48,4 @@ spring.jpa.show-sql=true
 #spring.h2.console.path=/h2-console</databasename>
 
 build.version=@build.version@
+build.version=0-RELEASE
