--- a/application.properties
+++ b/application.properties
@@ -47,5 +47,5 @@ spring.jpa.show-sql=true
 #spring.h2.console.enabled=true
 #spring.h2.console.path=/h2-console</databasename>
 
-build.version=@build.version@
+build.version=UNKNOWN
 
